--- a/sass/modules/author-bio.scss
+++ b/sass/modules/author-bio.scss
@@ -1,7 +1,8 @@
 .entry-author {
 	margin: 0;
 	padding: 1.5rem;
-	border-top: 1px solid rgba(0,0,0,0.1);
+	border-top: 1px solid;
+	@include border-color(--light-border-color);
 }
 
 .entry-author .author-avatar {
